changers in stat graphs

--- a/modules/jaggery-apps/app-publisher-web/themes/appm/css/date_picker/datepicker/custom-widget.css
+++ b/modules/jaggery-apps/app-publisher-web/themes/appm/css/date_picker/datepicker/custom-widget.css
@@ -11,7 +11,7 @@
 #date-range-field a  {
     color:#B2B2B2;
     background-color:#F7F7F7;
-    text-align:center;
+    text-align:center;well
     display: block;
     position: absolute;
     width: 26px;
