--- a/modules/jaggery-apps/app-publisher-web/themes/appm/partials/statistics.hbs
+++ b/modules/jaggery-apps/app-publisher-web/themes/appm/partials/statistics.hbs
@@ -42,7 +42,7 @@
                         <div id="pie-chart"></div>
                     </div>
                     <div class="clearfix"></div>
-                    <div id="pagination"></div>
+                    <ul id="pagination"class="pagination pagination-sm"></ul>
                 </div>
             </div>
         </div>
